# STAR_RIS_RSMA_TD3

./: .gitignore  CODEX_EXECUTION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.bootstrap/: source.tar.gz.b64
bootstrap/: TRIGGER_PR  part_00  part_01  part_01a  part_01b  part_02  part_03  part_03a  part_03b  part_03c  part_03d  part_03e  part_04  part_05  part_06a  part_06b  part_06c  part_06d  part_06e  part_07  part_07a  part_07a0  part_07a1  part_07a2  part_07b  part_07c0  part_07c1  part_07d  part_07e  part_08
configs/: siso_n128.yaml  siso_n16.yaml  siso_n32.yaml  siso_n64.yaml  siso_n96.yaml  smoke.yaml
docs/: METHOD_IMPLEMENTATION.md
kaggle_kernel/: star_ris_rsma_kaggle_worker.ipynb
kaggle_notebooks/: 01_td3_low_n_training.ipynb  02_td3_high_n_training.ipynb  03_ao_grid_evaluation.ipynb  04_ao_sca_evaluation.ipynb  05_analytical_ris_evaluation.ipynb  06_final_academic_report_and_benchmark.ipynb  KAGGLE_FINAL_THESIS_RUN.md
scripts/: aggregate_ablation_pilot.py  analyze_results.py  audit_kaggle_training_archives.py  audit_kaggle_training_archives_v2.py  audit_pilot_output.py  benchmark_latency.py  compare_drl_traditional.py  create_scenario_banks.py  extract_kaggle_text_archives.py  final_td3_statistics.py  final_v3_constrained_statistics.py  kaggle_final_report_common.py  kaggle_final_report_latency.py  kaggle_final_report_main.py  kaggle_final_report_quality.py  make_kaggle_jobs.py  merge_results.py  pilot_physical_action_v3.py  plot_results.py  run_ablation.py  run_evaluate.py  run_latency_aggregation_fixed.py  run_latency_benchmark.py  (+5 more)
(+77 files in other folders)
