[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "star-ris-rsma-td3"
version = "0.1.0"
description = "Single-agent DRL and conventional optimization baselines for SISO STAR-RIS-assisted RSMA"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
